Fri Aug  8 11:03:57 2003  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/templates/make.mpd:

          Remove the 'perl' call before depgen.pl.

        * bin/MakeProjectCreator/templates/nmake.mpd:

          Put back ACE_ROOT reference in the templates for the depgen.pl
          script.  It is necessary since nmake doesn't support the windows
          associates like the command prompt does.

Fri Aug  8 10:42:16 2003  Venkita Subramonian  <venkita@cs.wustl.edu>

        * Makefile: Added Kokyu to CORE_DIRS list since
          TAO/orbsvcs/orbsvcs is in core build and
          TAO/orbsvcs/orbsvcs/Event/*Kokyu* depends on Kokyu framework.

Fri Aug  8 13:22:12 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Service_Configurator/IPC-tests/client/local_dgram_client_test.cpp:
        * examples/Service_Configurator/IPC-tests/client/local_pipe_client_test.cpp:
        * examples/Service_Configurator/IPC-tests/client/local_stream_client_test.cpp:
          Added include of OS.h to get ACE_TMAIN. This fixes the link errors we see
          with these examples.

Fri Aug  8 07:10:06 2003  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/templates/make.mpd:
        * bin/MakeProjectCreator/templates/makedll.mpt:

          Moved the shflags out of the configurations and into the
          platforms.  The link flag is particular to the linker of the
          platform.

Fri Aug  8 06:56:52 2003  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/templates/make.mpd:

          Fixed a problem with my change from Thu Aug  7 12:43:05 2003.  The
          INSTARGET needed to be set before it was used in the all:
          dependencies.

Thu Aug  7 21:47:25 2003  Venkita Subramonian  <venkita@cs.wustl.edu>

        * Kokyu/Kokyu.h: Included Dispatcher_Impl.h header file instead of
          forward declaring Dispatcher_Impl. This was causing compile