@@ -1,3 +1,9 @@
+Fri Aug  8 13:26:25 2003  Venkita Subramonian  <venkita@cs.wustl.edu>
+
+	* Kokyu/Dispatcher_Task.{h,cpp}: Changed typo TAO_SYNCH_MUTEX to
+	  ACE_SYNCH_MUTEX to get rid of compile errors in explicit
+	  template instantiation builds.
+
 Fri Aug  8 11:03:57 2003  Chad Elliott  <elliott_c@ociweb.com>
 
         * bin/MakeProjectCreator/templates/make.mpd:
